# m2v

./: .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  SETUP_WINDOWS.md  alembic.ini  check_alignment.py  dev-plan-editor.md  dev-plan.md  docker-compose.yml  music2video.md  pipeline.toml  pyproject.toml
alembic/: env.py
docs/: ai-effects-video-design.md  ai-fx-development.md
frontend/: app.js  dashboard.css  dashboard.html  dashboard.js  index.html  style.css
input/: 害怕的人.txt  害怕的人_timeline.json  害怕的人_whisper_segments.json
output/: 害怕的人.ass  害怕的人_alignment.json  害怕的人_alignment.json.bak
src/: aligner.py  api_server.py  auth.py  compositor.py  config.py  editor_server.py  main.py  models.py  preprocessor.py  schemas.py  separator.py  storage.py  utils.py  worker.py
src/auto_karaoke_mv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: default_style.ass
tests/: test_aligner.py  test_preprocessor.py  test_subtitle.py
