[project]
name = "auto-karaoke-mv"
version = "0.1.0"
description = "Auto-Karaoke MV Generator — Suno MP3 + 歌词 → 卡拉OK变色视频"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "whisperx>=3.8.4",
    "demucs>=4.0.0",
    "librosa>=0.11.0",
    "cn2an>=0.5.22",
    "opencc-python-reimplemented>=0.1.7",
    "chardet>=5.0.0",
    "moviepy>=2.0.0",
    "pypinyin>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
m2v = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
