[project]
name = "auto-karaoke-mv"
version = "0.1.0"
description = "Auto-Karaoke MV Generator — Suno MP3 + 歌词 → 卡拉OK变色视频"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # ⚠️ torch + torchaudio 需从 PyTorch CUDA 源单独安装，不在此声明
    # pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu126
    "pyyaml>=6.0",
    "whisperx>=3.8.4",
    "demucs>=4.0.0",
    "librosa>=0.11.0",
    "cn2an>=0.5.22",
    "opencc-python-reimplemented>=0.1.7",
    "chardet>=5.0.0",
    "moviepy>=2.0.0",
    "pypinyin>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
editor = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.35",
    "alembic>=1.13",
]

[project.scripts]
m2v = "src.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# ── uv 配置: 指定 PyTorch CUDA 源 ──────────────────────
# 确保 torch/torchaudio 从 CUDA 126 索引安装，而非 PyPI 的 CPU 版
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]
